gitops/infra/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-argocd
  namespace: argocd
spec:
  hostnames:
    - argocd.172.18.0.0.sslip.io
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
